--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "Build";
+        var buildUrl = "/.proxy/Build";
       var loaderUrl = buildUrl + "/Build.loader.js";
       var config = {
         arguments: [],
